# VFS-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  Extension.md  README.md
include/: BlockManage.h  Core.h  DirectoryOpreation.h  Editor.h  FileOperation.h  InodeCache.h  Shell.h  User.h  VirtualDisk.h
src/: BlockManage.cpp  Core.cpp  DirectoryOpreation.cpp  Editor.cpp  FileOperation.cpp  InodeCache.cpp  Shell.cpp  User.cpp  VirtualDisk.cpp  main.cpp
test/: test_balloc_bfree.cpp  test_error.cpp  test_format.cpp  test_globals.cpp  test_helpers.h  test_ifree.cpp  test_inode_dir.cpp  test_login.cpp
